1998-10-23  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.5 was released.

1998-10-22  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* README.ja: New file.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* alist.el: Add autoload cookies.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el, EMU-ELS, README.en: Move `find-face' from poe-19.el to
	poe.el; abolish poe-19.el.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* invisible.el, inv-18.el, inv-19.el, inv-xemacs.el, poe-18.el,
	poe-19.el, poe-xemacs.el, emu.el, EMU-ELS, README.en: Separate
	invisible features from poe to invisible.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (eval-and-compile): New macro.
	Enclose redefinition of `read-string' by `eval-and-compile'.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (string): New function.

1998-10-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el (char-list-to-string): New function.

	* poe-xemacs.el, poe-19.el: Abolish macro `char-list-to-string'.

	* poe-18.el: Abolish function `char-list-to-string'.

1998-10-18  Tanaka Akira  <akr@jaist.ac.jp>

	* broken.el (check-broken-facility): Also use compile time
	description.


1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.4 was released.

1998-10-17  Tanaka Akira  <akr@jaist.ac.jp>

	* broken.el (check-broken-facility): New macro.

1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (define-obsolete-function-alias): New function.


1998-10-12  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.3 was released.

1998-10-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Add explanations about
	`LISPDIR', `VERSION_SPECIFIC_LISPDIR' and `what-where'.

	* Makefile (what-where): New target.
	(install): Add new arg `VERSION_SPECIFIC_LISPDIR'.

	* APEL-MK (what-where-apel): New function.
 	(config-apel): Refer to `VERSION_SPECIFIC_LISPDIR'.
