@@ -31,13 +31,13 @@ VARIABLE should be a string.  VALUE is optional; if not provided or is
 This function works by modifying `process-environment'."
   t)
 
-(defvar data-directory exec-directory)
+(defvar-maybe data-directory exec-directory)
 
 
 ;;; @ for EMACS 18.55
 ;;;
 
-(defvar buffer-undo-list nil)
+(defvar-maybe buffer-undo-list nil)
 
 
 ;;; @ hook
