@@ -1,4 +1,5 @@
-;;; poem-e20_3.el --- poem implementation for Emacs 20.3.
+;;; -*-byte-compile-dynamic: t;-*-
+;;; poem-e20_3.el --- poem submodule for Emacs 20.3
 
 ;; Copyright (C) 1998 Free Software Foundation, Inc.
 
