@@ -1,3 +1,9 @@
+1998-10-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
+	* poe.el (defvar-maybe): New macro.
+	(temporary-file-directory): New variable.
+
+
 1998-10-23  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* APEL: Version 9.5 was released.
